footer gap fixed

--- a/public/stylesheets/footer.css
+++ b/public/stylesheets/footer.css
@@ -4,8 +4,8 @@ footer {
     padding: 32px 0;
     text-align: center;
     position: relative;
-    bottom: -120px;
-    height: 120px;
+    bottom: -200px;
+    height: 130px;
     width: 100%;
 }
 
